package sample;

import javafx.scene.control.Alert;

public class Dialog {

    public static void showInfoDialog(String title, String text) {

        Alert alert=new Alert(Alert.AlertType.ERROR);
        alert.setTitle(title);
        alert.setContentText(text);
        alert.setHeaderText("");
        alert.showAndWait();
    }


}
